# aws-smsdk

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  DEVELOPERS.md  LICENCE.md  README.md  TODO.md  aws-reason.install  aws-reason.opam  aws-smsdk-client-dynamodb.opam  aws-smsdk-client-sqs.opam  aws-smsdk-clients.opam  aws-smsdk-gen.opam  aws-smsdk-lib.opam  aws-smsdk.opam  aws-smsdk.opam.template  dune  dune-project  flake.nix  package.json  result  shell.nix  smaws-clients.opam  smaws-gen.opam  smaws-lib.opam  test.ini
awssdklib_examples/: dune  dynamodb_createTableAndWriteData.ml  http_get.ml  ini_examples.ml  signed.ml  sqs_ListQueues.ml
examples/: dune  dynamodb_createTableAndWriteData.ml  http_get.ml  ini_examples.ml  signed.ml  sqs_ListQueues.ml
sdks/: .gitattributes  AWSSmSDKClients.ml  Aws_SmSdk_Clients.ml  Smaws_Clients.ml  dune  service-dune-generate.sh  service-dune-template  service-wrapper-ml-generate.sh
sdks/acm/: Smaws_Client_ACM.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/apprunner/: Smaws_Client_AppRunner.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/backup-gateway/: Smaws_Client_BackupGateway.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/cloudtrail/: Smaws_Client_CloudTrail.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/codeconnections/: Smaws_Client_CodeConnections.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/cognito-identity/: Smaws_Client_CognitoIdentity.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/config-service/: Smaws_Client_ConfigService.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/dax/: Smaws_Client_DAX.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/directory-service/: Smaws_Client_DirectoryService.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/dynamodb/: Smaws_Client_DynamoDB.mli  aws_smsdk_client_dynamodb.ml  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/dynamodb-streams/: Smaws_Client_DynamoDBStreams.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/eventbridge/: Smaws_Client_EventBridge.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/fms/: Smaws_Client_FMS.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/kendra/: Smaws_Client_Kendra.ml  Smaws_Client_Kendra.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/keyspaces/: Smaws_Client_Keyspaces.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/kinesis/: Smaws_Client_Kinesis.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/kinesis-analytics/: Smaws_Client_KinesisAnalytics.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/kinesis-analytics-v2/: Smaws_Client_KinesisAnalyticsV2.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/kms/: Smaws_Client_KMS.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/lightsail/: Smaws_Client_Lightsail.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/marketplace-agreement/: Smaws_Client_MarketplaceAgreement.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/migration-hub/: Smaws_Client_MigrationHub.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/opensearchserverless/: Smaws_Client_OpenSearchServerless.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/pi/: Smaws_Client_PI.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/proton/: Smaws_Client_Proton.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/resource-groups-tagging-api/: Smaws_Client_ResourceGroupsTaggingAPI.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/route53-recovery-cluster/: Smaws_Client_Route53RecoveryCluster.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/servicediscovery/: Smaws_Client_ServiceDiscovery.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/sfn/: Smaws_Client_SFN.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
sdks/shield/: Smaws_Client_Shield.mli  builders.ml  builders.mli  deserializers.ml  dune  operations.ml  operations.mli  serializers.ml  types.ml  types.mli
(+184 files in other folders)
