(executable
 (name http_get)
 (modules http_get)
 (libraries aws-smsdk-lib eio_main logs fmt))

(executable
 (name ini_examples)
 (modules ini_examples)
 (libraries aws-smsdk-lib eio_main logs fmt))

(executable
 (name sqs_ListQueues)
 (modules sqs_ListQueues)
 (libraries aws-smsdk-lib eio_main logs fmt aws-smsdk-clients.sqs))

(executable
 (name signed)
 (modules signed)
 (modes byte exe)
 (libraries aws-smsdk-lib eio_main logs fmt))

(executable
 (name dynamodb_createTableAndWriteData)
 (modules dynamodb_createTableAndWriteData)
 (libraries aws-smsdk-lib eio_main logs fmt aws-smsdk-clients.dynamodb))
