(executable
 (name http_get)
 (modules http_get)
 (public_name http_get)
 (libraries AwsSdkLib eio_main logs fmt))

(executable
 (name ini_examples)
 (modules ini_examples)
 (public_name ini_examples)
 (libraries AwsSdkLib eio_main logs fmt))

(executable
 (name signed)
 (modules signed)
 (public_name signed)
 (libraries AwsSdkLib eio_main logs fmt))
