(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/apprunner.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_AppRunner.ml
  Smaws_Client_AppRunner.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_AppRunner)
 (public_name smaws-clients.apprunner)
 (modules
  Smaws_Client_AppRunner
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
