(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/codeconnections.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_CodeConnections.ml
  Aws_SmSdk_Client_CodeConnections.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_CodeConnections)
 (public_name aws-smsdk-clients.codeconnections)
 (modules
  Aws_SmSdk_Client_CodeConnections
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
