(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/codeconnections.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CodeConnections.ml
  Smaws_Client_CodeConnections.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_CodeConnections)
 (public_name smaws-clients.codeconnections)
 (modules
  Smaws_Client_CodeConnections
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
