(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/cognito-identity.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_CognitoIdentity.ml
  Aws_SmSdk_Client_CognitoIdentity.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_CognitoIdentity)
 (public_name aws-smsdk-clients.cognito-identity)
 (modules
  Aws_SmSdk_Client_CognitoIdentity
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
