(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/cognito-identity.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CognitoIdentity.ml
  Smaws_Client_CognitoIdentity.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_CognitoIdentity)
 (public_name smaws-clients.cognito-identity)
 (modules
  Smaws_Client_CognitoIdentity
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
