(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/config-service.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_ConfigService.ml
  Aws_SmSdk_Client_ConfigService.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_ConfigService)
 (public_name aws-smsdk-clients.config-service)
 (modules
  Aws_SmSdk_Client_ConfigService
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
