(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/dax.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_DAX.ml
  Smaws_Client_DAX.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_DAX)
 (public_name smaws-clients.dax)
 (modules
  Smaws_Client_DAX
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
