(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/directory-service.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_DirectoryService.ml
  Smaws_Client_DirectoryService.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_DirectoryService)
 (public_name smaws-clients.directory-service)
 (modules
  Smaws_Client_DirectoryService
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
