(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/dynamodb-streams.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_DynamoDBStreams.ml
  Aws_SmSdk_Client_DynamoDBStreams.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_DynamoDBStreams)
 (public_name aws-smsdk-clients.dynamodb-streams)
 (modules
  Aws_SmSdk_Client_DynamoDBStreams
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
