(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/dynamodb.json))
 (targets builders.ml serializers.ml deserializers.ml types.ml operations.ml)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations)))

(library
 (name Aws_SmSdk_Client_DynamoDB)
 (public_name aws-smsdk-client-dynamodb)
 (modules
  aws_smsdk_client_dynamodb
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
