(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/dynamodb.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_DynamoDB.ml
  Aws_SmSdk_Client_DynamoDB.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_DynamoDB)
 (public_name aws-smsdk-client-dynamodb)
 (modules
  Aws_SmSdk_Client_DynamoDB
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
