(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/dynamodb.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_DynamoDB.ml
  Smaws_Client_DynamoDB.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_DynamoDB)
 (public_name smaws-clients.dynamodb)
 (modules
  Smaws_Client_DynamoDB
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
