(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/eventbridge.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_EventBridge.ml
  Aws_SmSdk_Client_EventBridge.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_EventBridge)
 (public_name aws-smsdk-clients.eventbridge)
 (modules
  Aws_SmSdk_Client_EventBridge
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
