(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/eventbridge.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_EventBridge.ml
  Smaws_Client_EventBridge.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_EventBridge)
 (public_name smaws-clients.eventbridge)
 (modules
  Smaws_Client_EventBridge
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
