(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/fms.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_FMS.ml
  Aws_SmSdk_Client_FMS.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_FMS)
 (public_name aws-smsdk-clients.fms)
 (modules
  Aws_SmSdk_Client_FMS
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
