(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/fms.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_FMS.ml
  Smaws_Client_FMS.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_FMS)
 (public_name smaws-clients.fms)
 (modules
  Smaws_Client_FMS
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
