(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/kendra.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Kendra.ml
  Smaws_Client_Kendra.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_Kendra)
 (public_name smaws-clients.kendra)
 (modules
  Smaws_Client_Kendra
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
