(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/keyspaces.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_Keyspaces.ml
  Aws_SmSdk_Client_Keyspaces.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_Keyspaces)
 (public_name aws-smsdk-clients.keyspaces)
 (modules
  Aws_SmSdk_Client_Keyspaces
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
