(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/keyspaces.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Keyspaces.ml
  Smaws_Client_Keyspaces.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_Keyspaces)
 (public_name smaws-clients.keyspaces)
 (modules
  Smaws_Client_Keyspaces
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
