(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/kinesis-analytics-v2.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_KinesisAnalyticsV2.ml
  Smaws_Client_KinesisAnalyticsV2.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_KinesisAnalyticsV2)
 (public_name smaws-clients.kinesis-analytics-v2)
 (modules
  Smaws_Client_KinesisAnalyticsV2
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
