(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/kinesis.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Kinesis.ml
  Smaws_Client_Kinesis.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_Kinesis)
 (public_name smaws-clients.kinesis)
 (modules
  Smaws_Client_Kinesis
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
