(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/kms.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_KMS.ml
  Smaws_Client_KMS.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_KMS)
 (public_name smaws-clients.kms)
 (modules
  Smaws_Client_KMS
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
