(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/lightsail.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_Lightsail.ml
  Aws_SmSdk_Client_Lightsail.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_Lightsail)
 (public_name aws-smsdk-clients.lightsail)
 (modules
  Aws_SmSdk_Client_Lightsail
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
