(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/lightsail.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Lightsail.ml
  Smaws_Client_Lightsail.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_Lightsail)
 (public_name smaws-clients.lightsail)
 (modules
  Smaws_Client_Lightsail
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
