(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/marketplace-agreement.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_MarketplaceAgreement.ml
  Smaws_Client_MarketplaceAgreement.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_MarketplaceAgreement)
 (public_name smaws-clients.marketplace-agreement)
 (modules
  Smaws_Client_MarketplaceAgreement
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
