(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/migration-hub.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_MigrationHub.ml
  Smaws_Client_MigrationHub.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_MigrationHub)
 (public_name smaws-clients.migration-hub)
 (modules
  Smaws_Client_MigrationHub
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
