(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/opensearchserverless.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_OpenSearchServerless.ml
  Aws_SmSdk_Client_OpenSearchServerless.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_OpenSearchServerless)
 (public_name aws-smsdk-clients.opensearchserverless)
 (modules
  Aws_SmSdk_Client_OpenSearchServerless
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
