(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/opensearchserverless.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_OpenSearchServerless.ml
  Smaws_Client_OpenSearchServerless.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_OpenSearchServerless)
 (public_name smaws-clients.opensearchserverless)
 (modules
  Smaws_Client_OpenSearchServerless
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
