(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/pi.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_PI.ml
  Smaws_Client_PI.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_PI)
 (public_name smaws-clients.pi)
 (modules
  Smaws_Client_PI
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
