(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/proton.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Proton.ml
  Smaws_Client_Proton.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_Proton)
 (public_name smaws-clients.proton)
 (modules
  Smaws_Client_Proton
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
