(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/resource-groups-tagging-api.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Aws_SmSdk_Client_ResourceGroupsTaggingAPI.ml
  Aws_SmSdk_Client_ResourceGroupsTaggingAPI.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Aws_SmSdk_Client_ResourceGroupsTaggingAPI)
 (public_name aws-smsdk-clients.resource-groups-tagging-api)
 (modules
  Aws_SmSdk_Client_ResourceGroupsTaggingAPI
  types
  serializers
  deserializers
  operations
  builders)
 (libraries aws-smsdk-lib))
