(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../awssdkjsv3/codegen/sdk-codegen/aws-models/resource-groups-tagging-api.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ResourceGroupsTaggingAPI.ml
  Smaws_Client_ResourceGroupsTaggingAPI.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_ResourceGroupsTaggingAPI)
 (public_name smaws-clients.resource-groups-tagging-api)
 (modules
  Smaws_Client_ResourceGroupsTaggingAPI
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
